# robot_self_filter

./: CMakeLists.txt  package.xml
config/: links.yaml
launch/: self_filter.launch
src/: self_mask.cpp
