<package>
  <name>robot_self_filter</name>
  <version>1.0.0</version>
  <description>
    The robot self filter is a package that allows you to filter out robot body parts from sensor information using the known positions and orientations of these parts. 
  </description>
  
  <author>Ioan Sucan</author>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/robot_self_filter</url>
 
  <maintainer email="goncabrita@gmail.com">Gonçalo Cabrita</maintainer>
  
   
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>assimp-dev</build_depend>

  <build_depend>pkg-config</build_depend>
 
 
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometric_shapes</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>resource_retriever</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>pkg-config</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>assimp</run_depend>
  
  <export>
     <cpp cflags="-I${prefix}/include `rosboost-cfg --cflags`" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lrobot_self_filter" />
  </export>

</package>